--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.application.name=UserService
 
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/user_service_db
-spring.datasource.username=&{DB_NAME:postgres}
-spring.datasource.password=&{DB_PASSWORD:password}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=${DB_NAME:postgres}
+spring.datasource.password=${DB_PASSWORD:password}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
