Update: Availability and Booking service

--- a/BookingService/src/test/resources/application-test.properties
+++ b/BookingService/src/test/resources/application-test.properties
@@ -9,6 +9,9 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
+# Ensure H2 dialect is used during tests
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 # Disable cloud clients during tests
 eureka.client.enabled=false
