--- a/BookingService/src/main/resources/application.properties
+++ b/BookingService/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 spring.application.name=BookingService
 server.port = 8083
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/booking_service_db
+spring.datasource.url=jdbc:postgresql://{DATABASE_HOST:localhost}:${DATABASE_PORT:5432}/${DATABASE_NAME:booking_service_db}
 spring.datasource.username=${DB_NAME:postgres}
 spring.datasource.password=${DB_PASSWORD:password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.org.springframework=INFO
+logging.level.com.example.bookingservice=DEBUG
 
