--- a/PaymentService/src/main/resources/application.properties
+++ b/PaymentService/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=PaymentService
+
+server.port=8081
+
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:payment_service_db}
+spring.datasource.username=${DB_NAME:postgres}
+spring.datasource.password=${DB_PASSWORD:password}}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Logging Configuration
+logging.level.org.springframework=INFO
+logging.level.com.example.paymentservice=DEBUG
