--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -5,8 +5,6 @@ server.port = 8081
 #================
 # DATABASE CONFIG
 #================
-
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/user_service_db
 spring.datasource.username=${DB_NAME:postgres}
 spring.datasource.password=${DB_PASSWORD:password}
@@ -14,6 +12,23 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
+
+#==================
+#admin properties
+
+admin.username=${ADMIN_USERNAME:admin}}
+admin.password=${ADMIN_PASSWORD:admin123}
+admin.email=${ADMIN_EMAIL:admin@gmail.com}
+
+#================
+# Jwt config
+jwt.secret=${JWT_SECRET:MyJwtSecretKey}
+jwt.expiration=${JWT_EXPIRY:3600000}
+jwt.refresh.expiration=${JWT_REFRESH_EXPIRY:86400000}
+
+
+#================
+# Logging config
+logging.level.org.springframework=INFO
+logging.level.com.example.userservice=DEBUG
 
