Update: Jwt token validation added to all services; Pending: Paylpal webhook setup

--- a/ReviewService/src/main/resources/application.properties
+++ b/ReviewService/src/main/resources/application.properties
@@ -1,9 +1,18 @@
 spring.application.name=ReviewService
 
 server.port=8086
-spring.datasource.url=jdbc:postgresql://localhost:5432/review_service_db
+spring.datasource.url=${DB_URL_REVIEW_SERVICE:jdbc:postgresql://localhost:5432/review_service_db}
 spring.datasource.username=${DB_NAME:postgres}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# Jwt config
+jwt.secret=${JWT_SECRET:MyJwtSecretKey}
+jwt.expiration=${JWT_EXPIRY:3600000}
+jwt.refresh.expiration=${JWT_REFRESH_EXPIRY:86400000}
+
+#logging Configuration
+logging.level.org.springframework=INFO
+logging.level.com.example.reviewservice=DEBUG
