--- a/ServiceListingService/src/main/resources/application.properties
+++ b/ServiceListingService/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=ServiceListingService
+
+server.port = 8082
+
+spring.datasource.url=${DB_URL_SERVICE_LISTING_SERVICE:jdbc:postgresql://localhost:5432/service_listing_db}
+spring.datasource.username=${DB_NAME:postgres}
+spring.datasource.password=${DB_PASSWORD:password}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Jwt config
+jwt.secret=${JWT_SECRET:MyJwtSecretKey}
+jwt.expiration=${JWT_EXPIRY:3600000}
+jwt.refresh.expiration=${JWT_REFRESH_EXPIRY:86400000}
+
+
+#Logging Configuration
+logging.level.org.springframework=INFO
+logging.level.com.example.servicelistingservice=DEBUG
