--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port = 8081
 #================
 # DATABASE CONFIG
 #================
-spring.datasource.url=jdbc:postgresql://localhost:5432/user_service_db
+spring.datasource.url=${DB_URL_USER_SERVICE:jdbc:postgresql://localhost:5432/user_service_db}
 spring.datasource.username=${DB_NAME:postgres}
 spring.datasource.password=${DB_PASSWORD:password}
 spring.datasource.driver-class-name=org.postgresql.Driver
