--- a/AvailabilityService/src/main/resources/application.properties
+++ b/AvailabilityService/src/main/resources/application.properties
@@ -2,17 +2,20 @@ spring.application.name=AvailabilityService
 
 server.port = 8084
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/availability_service_db
+spring.datasource.url=${DB_URL_AVAILABILITY_SERVICE:jdbc:postgresql://localhost:5432/availability_service_db}
 spring.datasource.username=${DB_NAME:postgres}
 spring.datasource.password=${DB_PASSWORD:password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
-#================
-# EUREKA CONFIG
-#================
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+# Jwt config
+jwt.secret=${JWT_SECRET:MyJwtSecretKey}
+jwt.expiration=${JWT_EXPIRY:3600000}
+jwt.refresh.expiration=${JWT_REFRESH_EXPIRY:86400000}
+
+#logging Configuration
+logging.level.org.springframework=INFO
+logging.level.com.example.availabilityservice=DEBUG
