--- a/BookingService/src/main/resources/application.properties
+++ b/BookingService/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=BookingService
 server.port = 8083
 
-spring.datasource.url=jdbc:postgresql://{DATABASE_HOST:localhost}:${DATABASE_PORT:5432}/${DATABASE_NAME:booking_service_db}
+spring.datasource.url=${DB_URL_BOOKING_SERVICE:jdbc:postgresql://localhost:5432/booking_service_db}
 spring.datasource.username=${DB_NAME:postgres}
 spring.datasource.password=${DB_PASSWORD:password}
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -9,6 +9,13 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Jwt config
+jwt.secret=${JWT_SECRET:MyJwtSecretKey}
+jwt.expiration=${JWT_EXPIRY:3600000}
+jwt.refresh.expiration=${JWT_REFRESH_EXPIRY:86400000}
+
+
 
 logging.level.org.springframework=INFO
 logging.level.com.example.bookingservice=DEBUG
