--- a/PaymentService/src/main/resources/application.properties
+++ b/PaymentService/src/main/resources/application.properties
@@ -1,14 +1,24 @@
 spring.application.name=PaymentService
 
-server.port=8081
+server.port=8085
 
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:payment_service_db}
+spring.datasource.url=${DB_URL_PAYMENT_SERVICE:jdbc:postgresql://localhost:5432/payment_service_db}
 spring.datasource.username=${DB_NAME:postgres}
-spring.datasource.password=${DB_PASSWORD:password}}
+spring.datasource.password=${DB_PASSWORD:password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# Jwt config
+jwt.secret=${JWT_SECRET:MyJwtSecretKey}
+jwt.expiration=${JWT_EXPIRY:3600000}
+jwt.refresh.expiration=${JWT_REFRESH_EXPIRY:86400000}
+
+# PayPal configuration
+paypal.client.id=${PAYPAL_CLIENT_ID:AZWiQr0pWKbmG3Ona_aUzEmhR4PER88aTtso4W07K2Ujadnme2iBxaWtXrFQVpKAGbLexhO_BhmQVA97}
+paypal.client.secret=${PAYPAL_CLIENT_SECRET:EIQLyciksDORGg25diwn12MRLehD__7ynWFRVhqwzVDsaVzmlgL5EL6f3_U1mNI_Z73vcmc_938CKRkO}
+paypal.base.url=${PAYPAL_BASE_URL:https://api.sandbox.paypal.com}
 
 # Logging Configuration
 logging.level.org.springframework=INFO
