Update: configured api gateway

--- a/ReviewService/src/main/resources/application.properties
+++ b/ReviewService/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.application.name=ReviewService
+spring.application.name=review-service
 
 server.port=8086
+
+eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=true
 spring.datasource.url=${DB_URL_REVIEW_SERVICE:jdbc:postgresql://localhost:5432/review_service_db}
 spring.datasource.username=${DB_NAME:postgres}
 spring.datasource.password=${DB_PASSWORD}
