--- a/BookingService/src/main/resources/application.properties
+++ b/BookingService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=BookingService
+spring.application.name=booking-service
 server.port = 8083
 
 spring.datasource.url=${DB_URL_BOOKING_SERVICE:jdbc:postgresql://localhost:5432/booking_service_db}
