--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.application.name=UserService
+spring.application.name=User-Service
 
 server.port = 8081
+eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=true
 
 #================
 # DATABASE CONFIG
