--- a/ApiGateway/src/main/resources/application.properties
+++ b/ApiGateway/src/main/resources/application.properties
@@ -11,7 +11,14 @@ management.endpoint.gateway.access=READ_ONLY
 # Updated property prefixes to new webflux namespace introduced in Spring Cloud 2025.0.0
 spring.cloud.gateway.server.webflux.discovery.locator.enabled=true
 spring.cloud.gateway.server.webflux.discovery.locator.lower-case-service-id=true
-spring.cloud.gateway.server.webflux.default-filters[0]=DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
+# Global CORS configuration
+spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowedOrigins=http://localhost:5173
+spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowedMethods=GET,POST,PUT,DELETE,OPTIONS,PATCH
+spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowedHeaders=*
+spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].exposedHeaders=Authorization
+spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowCredentials=true
+spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].maxAge=3600
+
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.fetch-registry=true
