--- a/ServiceListingService/src/main/resources/application.properties
+++ b/ServiceListingService/src/main/resources/application.properties
@@ -14,7 +14,10 @@ jwt.secret=${JWT_SECRET:MyJwtSecretKey}
 jwt.expiration=${JWT_EXPIRY:3600000}
 jwt.refresh.expiration=${JWT_REFRESH_EXPIRY:86400000}
 
-
 #Logging Configuration
 logging.level.org.springframework=INFO
 logging.level.com.example.servicelistingservice=DEBUG
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=true
