--- a/BookingService/src/main/resources/application.properties
+++ b/BookingService/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=booking-service
 server.port = 8083
+eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=true
 
 spring.datasource.url=${DB_URL_BOOKING_SERVICE:jdbc:postgresql://localhost:5432/booking_service_db}
 spring.datasource.username=${DB_NAME:postgres}
