--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,12 @@
     "@paypal/react-paypal-js": "^8.9.2",
     "@tanstack/react-query": "^5.90.5",
     "axios": "^1.13.0",
+    "leaflet": "^1.9.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.4",
     "zod": "^4.1.12"
   },
