--- a/ApiGateway/src/main/resources/application.properties
+++ b/ApiGateway/src/main/resources/application.properties
@@ -26,7 +26,7 @@ eureka.client.register-with-eureka=true
 
 # Routes (updated keys)
 spring.cloud.gateway.server.webflux.routes[0].id=user-service
-spring.cloud.gateway.server.webflux.routes[0].uri=lb://USER-SERVICE
+spring.cloud.gateway.server.webflux.routes[0].uri=${USER_SERVICE_URI:lb://USER-SERVICE}
 spring.cloud.gateway.server.webflux.routes[0].predicates[0]=Path=/api/users/**,/api/auth/**
 
 spring.cloud.gateway.server.webflux.routes[1].id=service-listing-service
