--- a/ReviewService/src/main/resources/application.properties
+++ b/ReviewService/src/main/resources/application.properties
@@ -19,3 +19,6 @@ jwt.refresh.expiration=${JWT_REFRESH_EXPIRY:86400000}
 #logging Configuration
 logging.level.org.springframework=INFO
 logging.level.com.example.reviewservice=DEBUG
+
+# Feign client config
+feign.client.config.booking-service.url=${BOOKING_SERVICE_URI:http://localhost:8083}
