--- a/ApiGateway/Dockerfile
+++ b/ApiGateway/Dockerfile
@@ -4,11 +4,11 @@ LABEL authors="Sarthak"
 WORKDIR /app
 COPY pom.xml .
 COPY src ./src
-RUN mvn clean package -DskipTests
+RUN mvn -B clean package -DskipTests
 
 #RUN STAGE
 FROM eclipse-temurin:21-jdk-alpine
 WORKDIR /app
 COPY --from=builder /app/target/*.jar ./app.jar
-EXPOSE 8082
+EXPOSE 8081
 ENTRYPOINT ["java", "-jar", "app.jar"]
