--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -33,3 +33,7 @@ jwt.refresh.expiration=${JWT_REFRESH_EXPIRY:86400000}
 logging.level.org.springframework=INFO
 logging.level.com.example.userservice=DEBUG
 
+#================
+# Feign client config
+feign.client.config.review-service.url=${REVIEW_SERVICE_URI:http://localhost:8086}
+
