--- a/.github/workflows/locallink.yml
+++ b/.github/workflows/locallink.yml
@@ -89,5 +89,5 @@ jobs:
         - name: Build & Push Frontend Image
           if: needs.detect_changes.outputs.frontend_changed == 'true'
           run: |
-            docker build -t ${{ secrets.DOCKER_USERNAME }}/frontend:latest frontend
-            docker push ${{ secrets.DOCKER_USERNAME }}/frontend:latest
+            docker build -t ${{ secrets.DOCKER_USERNAME }}/frontend-locallink:latest frontend-locallink
+            docker push ${{ secrets.DOCKER_USERNAME }}/frontend-locallink:latest
