api gateway problem fixed

--- a/ApiGateway/src/main/resources/application.properties
+++ b/ApiGateway/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ApiGateway
 
 # Changed port to avoid 8080 conflict (adjust or free 8080 if you prefer that)
-server.port={API_GATEWAY_PORT:8088}
+server.port=${API_GATEWAY_PORT:8088}
 management.endpoints.web.exposure.include=health,info
 management.endpoints.web.base-path=/actuator
 # If you need to control access in Spring Boot 3.5+, use management.endpoint.gateway.access (e.g. READ_ONLY)
