cors issue fixed for dockers

--- a/ApiGateway/src/main/resources/application.properties
+++ b/ApiGateway/src/main/resources/application.properties
@@ -1,49 +1,49 @@
 spring.application.name=ApiGateway
 
-# Changed port to avoid 8080 conflict (adjust or free 8080 if you prefer that)
 server.port=${API_GATEWAY_PORT:8088}
+
 management.endpoints.web.exposure.include=health,info
 management.endpoints.web.base-path=/actuator
-# If you need to control access in Spring Boot 3.5+, use management.endpoint.gateway.access (e.g. READ_ONLY)
 management.endpoint.gateway.access=READ_ONLY
 
-# Updated property prefixes to new webflux namespace introduced in Spring Cloud 2025.0.0
-spring.cloud.gateway.server.webflux.discovery.locator.enabled=true
-spring.cloud.gateway.server.webflux.discovery.locator.lower-case-service-id=true
-# Global CORS configuration
-spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowedOrigins=${CORS_ALLOWED_ORIGIN:http://localhost:5173}
-spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowedMethods=GET,POST,PUT,DELETE,OPTIONS,PATCH
-spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowedHeaders=*
-spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].exposedHeaders=Authorization
-spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowCredentials=true
-spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].maxAge=3600
+# Discovery locator
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
+# CORS config (CORRECT)
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedOrigins=${CORS_ALLOWED_ORIGIN:http://localhost}
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedMethods=GET,POST,PUT,DELETE,OPTIONS,PATCH
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedHeaders=*
+spring.cloud.gateway.globalcors.cors-configurations.[/**].exposedHeaders=Authorization
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowCredentials=true
+spring.cloud.gateway.globalcors.cors-configurations.[/**].maxAge=3600
 
+# Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 
-# Routes (updated keys)
-spring.cloud.gateway.server.webflux.routes[0].id=user-service
-spring.cloud.gateway.server.webflux.routes[0].uri=${USER_SERVICE_URI:lb://USER-SERVICE}
-spring.cloud.gateway.server.webflux.routes[0].predicates[0]=Path=/api/users/**,/api/auth/**
+# Routes
+spring.cloud.gateway.routes[0].id=user-service
+spring.cloud.gateway.routes[0].uri=${USER_SERVICE_URI:lb://USER-SERVICE}
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/users/**,/api/auth/**
 
-spring.cloud.gateway.server.webflux.routes[1].id=service-listing-service
-spring.cloud.gateway.server.webflux.routes[1].uri=${SERVICE_LISTING_SERVICE_URI:lb://SERVICE-LISTING-SERVICE}
-spring.cloud.gateway.server.webflux.routes[1].predicates[0]=Path=/api/services/**
+spring.cloud.gateway.routes[1].id=service-listing-service
+spring.cloud.gateway.routes[1].uri=${SERVICE_LISTING_SERVICE_URI:lb://SERVICE-LISTING-SERVICE}
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/services/**
 
-spring.cloud.gateway.server.webflux.routes[2].id=booking-service
-spring.cloud.gateway.server.webflux.routes[2].uri=${BOOKING_SERVICE_URI:lb://BOOKING-SERVICE}
-spring.cloud.gateway.server.webflux.routes[2].predicates[0]=Path=/api/bookings/**
+spring.cloud.gateway.routes[2].id=booking-service
+spring.cloud.gateway.routes[2].uri=${BOOKING_SERVICE_URI:lb://BOOKING-SERVICE}
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/bookings/**
 
-spring.cloud.gateway.server.webflux.routes[3].id=availability-service
-spring.cloud.gateway.server.webflux.routes[3].uri=${AVAILABILITY_SERVICE_URI:lb://AVAILABILITY-SERVICE}
-spring.cloud.gateway.server.webflux.routes[3].predicates[0]=Path=/api/availability/**
+spring.cloud.gateway.routes[3].id=availability-service
+spring.cloud.gateway.routes[3].uri=${AVAILABILITY_SERVICE_URI:lb://AVAILABILITY-SERVICE}
+spring.cloud.gateway.routes[3].predicates[0]=Path=/api/availability/**
 
-spring.cloud.gateway.server.webflux.routes[4].id=payment-service
-spring.cloud.gateway.server.webflux.routes[4].uri=${PAYMENT_SERVICE_URI:lb://PAYMENT-SERVICE}
-spring.cloud.gateway.server.webflux.routes[4].predicates[0]=Path=/api/payments/**
+spring.cloud.gateway.routes[4].id=payment-service
+spring.cloud.gateway.routes[4].uri=${PAYMENT_SERVICE_URI:lb://PAYMENT-SERVICE}
+spring.cloud.gateway.routes[4].predicates[0]=Path=/api/payments/**
 
-spring.cloud.gateway.server.webflux.routes[5].id=review-service
-spring.cloud.gateway.server.webflux.routes[5].uri=${REVIEW_SERVICE_URI:lb://REVIEW-SERVICE}
-spring.cloud.gateway.server.webflux.routes[5].predicates[0]=Path=/api/reviews/**
+spring.cloud.gateway.routes[5].id=review-service
+spring.cloud.gateway.routes[5].uri=${REVIEW_SERVICE_URI:lb://REVIEW-SERVICE}
+spring.cloud.gateway.routes[5].predicates[0]=Path=/api/reviews/**
