Removed the eureka server config

--- a/BookingService/src/main/resources/application.properties
+++ b/BookingService/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 spring.application.name=booking-service
 server.port = 8083
-eureka.instance.hostname=localhost
-eureka.instance.prefer-ip-address=true
 
 spring.datasource.url=${DB_URL_BOOKING_SERVICE:jdbc:postgresql://localhost:5432/booking_service_db}
 spring.datasource.username=${DB_NAME:postgres}
@@ -17,8 +15,9 @@ jwt.secret=${JWT_SECRET:MyJwtSecretKey}
 jwt.expiration=${JWT_EXPIRY:3600000}
 jwt.refresh.expiration=${JWT_REFRESH_EXPIRY:86400000}
 
-
-
 logging.level.org.springframework=INFO
 logging.level.com.example.bookingservice=DEBUG
 
+feign.client.config.availability-service.url=${AVAILABILITY_SERVICE_URI:http://localhost:8084}
+feign.client.config.user-service.url=${USER_SERVICE_URI:http://localhost:8081}
+feign.client.config.service-listing-service.url=${SERVICE_LISTING_SERVICE_URI:http://localhost:8082}
