--- a/PaymentService/src/main/resources/application.properties
+++ b/PaymentService/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 spring.application.name=payment-service
 
 server.port=8085
-eureka.instance.hostname=localhost
-eureka.instance.prefer-ip-address=true
 
 # Database Configuration
 spring.datasource.url=${DB_URL_PAYMENT_SERVICE:jdbc:postgresql://localhost:5432/payment_service_db}
@@ -18,8 +16,8 @@ jwt.expiration=${JWT_EXPIRY:3600000}
 jwt.refresh.expiration=${JWT_REFRESH_EXPIRY:86400000}
 
 # PayPal configuration
-paypal.client.id=${PAYPAL_CLIENT_ID:AZWiQr0pWKbmG3Ona_aUzEmhR4PER88aTtso4W07K2Ujadnme2iBxaWtXrFQVpKAGbLexhO_BhmQVA97}
-paypal.client.secret=${PAYPAL_CLIENT_SECRET:EIQLyciksDORGg25diwn12MRLehD__7ynWFRVhqwzVDsaVzmlgL5EL6f3_U1mNI_Z73vcmc_938CKRkO}
+paypal.client.id=${PAYPAL_CLIENT_ID}
+paypal.client.secret=${PAYPAL_CLIENT_SECRET}
 paypal.base.url=${PAYPAL_BASE_URL:https://api.sandbox.paypal.com}
 
 # Logging Configuration
