--- a/ServiceListingService/src/main/resources/application.properties
+++ b/ServiceListingService/src/main/resources/application.properties
@@ -18,6 +18,5 @@ jwt.refresh.expiration=${JWT_REFRESH_EXPIRY:86400000}
 logging.level.org.springframework=INFO
 logging.level.com.example.servicelistingservice=DEBUG
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.instance.hostname=localhost
-eureka.instance.prefer-ip-address=true
+# Feign client config
+feign.client.config.review-service.url=${REVIEW_SERVICE_URI:http://localhost:8086}
