--- a/AvailabilityService/src/main/resources/application.properties
+++ b/AvailabilityService/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 spring.application.name=availability-service
 
 server.port = 8084
-eureka.instance.hostname=localhost
-eureka.instance.prefer-ip-address=true
 
 spring.datasource.url=${DB_URL_AVAILABILITY_SERVICE:jdbc:postgresql://localhost:5432/availability_service_db}
 spring.datasource.username=${DB_NAME:postgres}
@@ -21,3 +19,5 @@ jwt.refresh.expiration=${JWT_REFRESH_EXPIRY:86400000}
 #logging Configuration
 logging.level.org.springframework=INFO
 logging.level.com.example.availabilityservice=DEBUG
+
+feign.client.config.booking-service.url=${BOOKING_SERVICE_URI:http://localhost:8083}
