fixing port issues

--- a/BookingService/src/main/resources/application.properties
+++ b/BookingService/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=booking-service
-server.port = 8083
+server.port = ${BOOKING_SERVICE_PORT:8083}
 
 spring.datasource.url=${DB_URL_BOOKING_SERVICE:jdbc:postgresql://localhost:5432/booking_service_db}
 spring.datasource.username=${DB_NAME:postgres}
