--- a/PaymentService/src/main/resources/application.properties
+++ b/PaymentService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=payment-service
 
-server.port=8085
+server.port=${PAYMENT_SERVICE_PORT:8085}
 
 # Database Configuration
 spring.datasource.url=${DB_URL_PAYMENT_SERVICE:jdbc:postgresql://localhost:5432/payment_service_db}
