--- a/ServiceListingService/src/main/resources/application.properties
+++ b/ServiceListingService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=service-listing-service
 
-server.port = 8082
+server.port = ${SERVICE_LISTING_SERVICE_PORT:8082}
 
 spring.datasource.url=${DB_URL_SERVICE_LISTING_SERVICE:jdbc:postgresql://localhost:5432/service_listing_db}
 spring.datasource.username=${DB_NAME:postgres}
