--- a/AvailabilityService/src/main/resources/application.properties
+++ b/AvailabilityService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=availability-service
 
-server.port = 8084
+server.port = ${AVAILABILITY_SERVICE_PORT:8084}
 
 spring.datasource.url=${DB_URL_AVAILABILITY_SERVICE:jdbc:postgresql://localhost:5432/availability_service_db}
 spring.datasource.username=${DB_NAME:postgres}
