--- a/ReviewService/src/main/resources/application.properties
+++ b/ReviewService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=review-service
 
-server.port=8086
+server.port=${REVIEW_SERVICE_PORT:8086}
 
 spring.datasource.url=${DB_URL_REVIEW_SERVICE:jdbc:postgresql://localhost:5432/review_service_db}
 spring.datasource.username=${DB_NAME:postgres}
