--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=User-Service
 
-server.port = 8081
+server.port = ${USER_SERVICE_PORT:8081}
 
 #================
 # DATABASE CONFIG
