--- a/PaymentService/src/main/resources/application.properties
+++ b/PaymentService/src/main/resources/application.properties
@@ -23,3 +23,6 @@ paypal.base.url=${PAYPAL_BASE_URL:https://api.sandbox.paypal.com}
 # Logging Configuration
 logging.level.org.springframework=INFO
 logging.level.com.example.paymentservice=DEBUG
+
+# Feign client config
+feign.client.config.booking-service.url=${BOOKING_SERVICE_URI:http://localhost:8083}
