--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       DB_URL_AVAILABILITY_SERVICE: jdbc:postgresql://postgres:5432/availability_service_db
       DB_NAME: user
       DB_PASSWORD: password
-      JWT_SECRET: MyJwtSecretKey
+      JWT_SECRET: 9d810dd18cc5f2a765c125e39a1d22382dbcce1a311fc85c6a2cff682ae9618b
       JWT_EXPIRY: 3600000
       JWT_REFRESH_EXPIRY: 86400000
     restart: always
@@ -49,12 +49,15 @@ services:
       DB_URL_BOOKING_SERVICE: jdbc:postgresql://postgres:5432/booking_service_db
       DB_NAME: user
       DB_PASSWORD: password
-      JWT_SECRET: MyJwtSecretKey
+      JWT_SECRET: 9d810dd18cc5f2a765c125e39a1d22382dbcce1a311fc85c6a2cff682ae9618b
       JWT_EXPIRY: 3600000
       JWT_REFRESH_EXPIRY: 86400000
+      AVAILABILITY_SERVICE_URI: http://availabilityservice:8081
+      USER_SERVICE_URI: http://userservice:8086
+      SERVICE_LISTING_SERVICE_URI: http://servicelistingservice:8085
     restart: always
     depends_on:
-      - postgres
+        - postgres
 
   paymentservice:
     image: sarthakrakshe/paymentservice:latest
@@ -66,12 +69,13 @@ services:
       DB_URL_PAYMENT_SERVICE: jdbc:postgresql://postgres:5432/payment_service_db
       DB_NAME: user
       DB_PASSWORD: password
-      JWT_SECRET: MyJwtSecretKey
+      JWT_SECRET: 9d810dd18cc5f2a765c125e39a1d22382dbcce1a311fc85c6a2cff682ae9618b
       JWT_EXPIRY: 3600000
       JWT_REFRESH_EXPIRY: 86400000
       PAYPAL_CLIENT_ID: AZWiQr0pWKbmG3Ona_aUzEmhR4PER88aTtso4W07K2Ujadnme2iBxaWtXrFQVpKAGbLexhO_BhmQVA97
       PAYPAL_CLIENT_SECRET: EIQLyciksDORGg25diwn12MRLehD__7ynWFRVhqwzVDsaVzmlgL5EL6f3_U1mNI_Z73vcmc_938CKRkO
       PAYPAL_BASE_URL: https://api.sandbox.paypal.com
+      BOOKING_SERVICE_URI: http://bookingservice:8082
     restart: always
     depends_on:
       - postgres
@@ -86,13 +90,12 @@ services:
       DB_URL_REVIEW_SERVICE: jdbc:postgresql://postgres:5432/review_service_db
       DB_NAME: user
       DB_PASSWORD: password
-      JWT_SECRET: MyJwtSecretKey
+      JWT_SECRET: 9d810dd18cc5f2a765c125e39a1d22382dbcce1a311fc85c6a2cff682ae9618b
       JWT_EXPIRY: 3600000
       JWT_REFRESH_EXPIRY: 86400000
       BOOKING_SERVICE_URI: http://bookingservice:8082
     restart: always
     depends_on:
-      - bookingservice
       - postgres
 
   servicelistingservice:
@@ -105,9 +108,10 @@ services:
       DB_URL_SERVICE_LISTING_SERVICE: jdbc:postgresql://postgres:5432/service_listing_db
       DB_NAME: user
       DB_PASSWORD: password
-      JWT_SECRET: MyJwtSecretKey
+      JWT_SECRET: 9d810dd18cc5f2a765c125e39a1d22382dbcce1a311fc85c6a2cff682ae9618b
       JWT_EXPIRY: 3600000
       JWT_REFRESH_EXPIRY: 86400000
+      REVIEW_SERVICE_URI: http://reviewservice:8084
     restart: always
     depends_on:
       - postgres
@@ -122,7 +126,7 @@ services:
       DB_URL_USER_SERVICE: jdbc:postgresql://postgres:5432/user_service_db
       DB_NAME: user
       DB_PASSWORD: password
-      JWT_SECRET: MyJwtSecretKey
+      JWT_SECRET: 9d810dd18cc5f2a765c125e39a1d22382dbcce1a311fc85c6a2cff682ae9618b
       JWT_EXPIRY: 3600000
       JWT_REFRESH_EXPIRY: 86400000
       ADMIN_USERNAME: admin
@@ -131,7 +135,6 @@ services:
       REVIEW_SERVICE_URI: http://reviewservice:8084
     restart: always
     depends_on:
-      - reviewservice
       - postgres
 
   frontend:
