added hikari pool connections

--- a/AvailabilityService/src/main/resources/application.properties
+++ b/AvailabilityService/src/main/resources/application.properties
@@ -21,3 +21,8 @@ logging.level.org.springframework=INFO
 logging.level.com.example.availabilityservice=DEBUG
 
 feign.client.config.booking-service.url=${BOOKING_SERVICE_URI:http://localhost:8083}
+
+server.tomcat.max-threads=20
+spring.datasource.hikari.maximum-pool-size=3
+spring.datasource.hikari.minimum-idle=1
+spring.jpa.open-in-view=false
