--- a/BookingService/src/main/resources/application.properties
+++ b/BookingService/src/main/resources/application.properties
@@ -21,3 +21,9 @@ logging.level.com.example.bookingservice=DEBUG
 feign.client.config.availability-service.url=${AVAILABILITY_SERVICE_URI:http://localhost:8084}
 feign.client.config.user-service.url=${USER_SERVICE_URI:http://localhost:8081}
 feign.client.config.service-listing-service.url=${SERVICE_LISTING_SERVICE_URI:http://localhost:8082}
+
+
+server.tomcat.max-threads=20
+spring.datasource.hikari.maximum-pool-size=3
+spring.datasource.hikari.minimum-idle=1
+spring.jpa.open-in-view=false
