--- a/ReviewService/src/main/resources/application.properties
+++ b/ReviewService/src/main/resources/application.properties
@@ -20,3 +20,10 @@ logging.level.com.example.reviewservice=DEBUG
 
 # Feign client config
 feign.client.config.booking-service.url=${BOOKING_SERVICE_URI:http://localhost:8083}
+
+
+server.tomcat.max-threads=20
+spring.datasource.hikari.maximum-pool-size=3
+spring.datasource.hikari.minimum-idle=1
+spring.jpa.open-in-view=false
+spring.datasource.hikari.idle-timeout=10000
