--- a/PaymentService/src/main/resources/application.properties
+++ b/PaymentService/src/main/resources/application.properties
@@ -26,3 +26,9 @@ logging.level.com.example.paymentservice=DEBUG
 
 # Feign client config
 feign.client.config.booking-service.url=${BOOKING_SERVICE_URI:http://localhost:8083}
+
+
+server.tomcat.max-threads=20
+spring.datasource.hikari.maximum-pool-size=3
+spring.datasource.hikari.minimum-idle=1
+spring.jpa.open-in-view=false
