--- a/ServiceListingService/src/main/resources/application.properties
+++ b/ServiceListingService/src/main/resources/application.properties
@@ -20,3 +20,8 @@ logging.level.com.example.servicelistingservice=DEBUG
 
 # Feign client config
 feign.client.config.review-service.url=${REVIEW_SERVICE_URI:http://localhost:8086}
+
+server.tomcat.max-threads=20
+spring.datasource.hikari.maximum-pool-size=3
+spring.datasource.hikari.minimum-idle=1
+spring.jpa.open-in-view=false
