--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -35,3 +35,8 @@ logging.level.com.example.userservice=DEBUG
 # Feign client config
 feign.client.config.review-service.url=${REVIEW_SERVICE_URI:http://localhost:8086}
 
+server.tomcat.max-threads=20
+spring.datasource.hikari.maximum-pool-size=3
+spring.datasource.hikari.minimum-idle=1
+spring.jpa.open-in-view=false
+
